# GhostHunt

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  build.sbt  config.json  ext.cmake
resource/: credits.txt
src/: CMakeLists.txt  dependencies.cmake  files.cmake  main.cpp
src/GhostHunt/controller/: AnimatedController.cpp  AnimatedController.h
src/GhostHunt/ec/: Actor.h  Animated.h  Ghost.h  Player.h  Position.h
src/GhostHunt/service/: GhostRenderingService.cpp  GhostRenderingService.h  PlayerRenderingService.cpp  PlayerRenderingService.h
src/GhostHunt/view/: ActorView.cpp  ActorView.h
src/main/resources/: credits.txt
src/main/scala/uk/co/morleydev/ghosthunt/: ControllerStore.scala  Game.scala  Main.scala  ViewStore.scala
src/main/scala/uk/co/morleydev/ghosthunt/controller/: Controller.scala  ControllerStore.scala
src/main/scala/uk/co/morleydev/ghosthunt/controller/impl/: ClientConnectController.scala  MenuOptionController.scala  ServerHostController.scala  TextBoxController.scala  TitleScreenController.scala
src/main/scala/uk/co/morleydev/ghosthunt/data/: ContentFactory.scala  InputMapper.scala
src/main/scala/uk/co/morleydev/ghosthunt/data/event/: Event.scala  EventQueue.scala
src/main/scala/uk/co/morleydev/ghosthunt/data/file/: ContentFactory.scala  ContentFactoryFromFileSystem.scala  ContentFactoryFromResource.scala
src/main/scala/uk/co/morleydev/ghosthunt/data/net/: Client.scala  ClientId.scala  NetworkMessage.scala  Server.scala
src/main/scala/uk/co/morleydev/ghosthunt/data/sfml/: SfmlFactory.scala  SfmlWindowEvents.scala
src/main/scala/uk/co/morleydev/ghosthunt/data/store/: EntityComponentStore.scala  EntityId.scala  Maze.scala
src/main/scala/uk/co/morleydev/ghosthunt/event/: CreateController.scala  CreateView.scala
src/main/scala/uk/co/morleydev/ghosthunt/event/sys/: CreateController.scala  CreateView.scala
src/main/scala/uk/co/morleydev/ghosthunt/model/: Configuration.scala  GameTime.scala  InputConfiguration.scala  Vector2f.scala
src/main/scala/uk/co/morleydev/ghosthunt/model/event/: Event.scala
src/main/scala/uk/co/morleydev/ghosthunt/model/net/: AcceptJoinGameRequest.scala  ClientId.scala  NetworkMessage.scala
src/main/scala/uk/co/morleydev/ghosthunt/model/store/: EntityId.scala
src/main/scala/uk/co/morleydev/ghosthunt/sfml/: SfmlFactory.scala  SfmlWindowEvents.scala
src/main/scala/uk/co/morleydev/ghosthunt/util/: Killable.scala  using.scala
src/main/scala/uk/co/morleydev/ghosthunt/view/: View.scala  ViewStore.scala
src/main/scala/uk/co/morleydev/ghosthunt/view/impl/: GhostActorView.scala  MazeView.scala  MenuOptionView.scala  PlayerActorView.scala  ScoreView.scala  TextBoxView.scala  TextView.scala
src/test/scala/uk/co/morleydev/ghosthunt/test/: ControllerStoreTests.scala  ViewStoreTests.scala
src/test/scala/uk/co/morleydev/ghosthunt/test/controller/: ControllerStoreTests.scala
src/test/scala/uk/co/morleydev/ghosthunt/test/data/: InputMapperTests.scala
test/: CMakeLists.txt  files.cmake  main.cpp
test/controller/: AnimatedControllerTests.cpp
test/service/: GhostRenderingServiceTests.cpp  PlayerRenderingServiceTests.cpp
test/view/: ActorViewTests.cpp
(+32 files in other folders)
